--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet" />
 
     <link rel="stylesheet" href="public/build/css/app.css" />
-    <title>Portfolio-Stephanie Gonzalez</title>
+    <title>Stephanie Gonzalez | Systems and Chemical Engineer</title>
     <link rel="shortcut icon" href="public/build/img/SG.png" />
   </head>
   <body>
